testsuite/tests/parser/should_fail/T19923c.stderr

T19923c.hs:1:17: error: [GHC-04924]
    Unknown flag in  {-# OPTIONS_GHC #-} pragma: TemplateHaskell,
